<resources>
    <string name="app_name">WordBook</string>
    <string name="search">Search</string>
    <string name="search_words">Search on wordbook</string>
    <string name="send_feedback">Send feedback</string>
    <string name="buy_me_a_coffee">Buy me a coffee</string>
    <string name="settings">Settings</string>
    <string name="by_author">by <b>@atahabaki</b></string>
    <string name="search_hint">What do you want to remember?</string>
    <string name="filter">Filter words by…</string>
    <string name="order_az_by_word">Order words A-Z</string>
    <string name="order_za_by_word">Order words Z-A</string>
    <string name="order_za_by_meaning">Order meanings A-Z</string>
    <string name="order_az_by_meaning">Order meanings Z-A</string>
    <string name="close_search">Close</string>
    <string name="close_search_tooltip">Clear search and close search box…</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_all_tooltip">Delete everything…</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="confirmation_delete_all">This operation will erase all words from the list, there\'s no way to go back. Do you really want to delete?</string>
    <string name="new_word">New Word…</string>
    <string name="new_word_hint">Fresh new word…</string>
    <string name="add_meaning">Add Meaning</string>
</resources>