<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/words_menu_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"/>
    <item
        android:id="@+id/words_menu_delete_all"
        android:title="@string/delete_all"
        android:icon="@drawable/ic_delete_all"
        app:showAsAction="always"/>
    <item
        android:id="@+id/words_menu_filter"
        android:title="@string/filter"
        android:icon="@drawable/ic_filter"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/words_menu_order_az_by_word"
                android:title="@string/order_az_by_word"/>
            <item
                android:id="@+id/words_menu_order_za_by_word"
                android:title="@string/order_za_by_word"/>
            <item
                android:id="@+id/words_menu_order_za_by_meaning"
                android:title="@string/order_za_by_meaning"/>
            <item
                android:id="@+id/words_menu_order_az_by_meaning"
                android:title="@string/order_az_by_meaning"/>
        </menu>
    </item>
</menu>